<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_downloads"
            android:icon="@drawable/downloads"
            android:title="@string/saved"/>

    <!--<item-->
            <!--android:id="@+id/navigation_queue"-->
            <!--android:icon="@drawable/queue"-->
            <!--android:title="@string/queue"/>-->

    <item
            android:id="@+id/navigation_favourites"
            android:icon="@drawable/favourites"
            android:title="@string/favourites"/>
    <item
            android:id="@+id/navigation_later"
            android:icon="@drawable/later"
            android:title="@string/listen_later"/>

    <item
            android:id="@+id/navigation_account"
            android:icon="@drawable/account"
            android:title="@string/account"/>
</menu>
