<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".ui.AccountFragment">
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:maxLength="16"
            android:id="@+id/et_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="44dp"
            app:layout_constraintBottom_toTopOf="@+id/et_password"
            android:hint="@string/login" android:layout_marginTop="124dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:maxLength="16"
            android:id="@+id/et_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="44dp"
            app:layout_constraintTop_toBottomOf="@+id/et_login"
            app:layout_constraintHorizontal_bias="0.5"
            android:hint="@string/password"/>
    <Button
            android:text="@string/sign_in"
            android:layout_width="210dp"
            android:layout_height="46dp"
            android:id="@+id/btn_sign"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/et_password"/>
</androidx.constraintlayout.widget.ConstraintLayout>
