<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_player"
        tools:context=".ui.PlayerActivity">

    <ImageButton
            android:layout_height="50dp"
            android:layout_width="50dp"
            android:background="@drawable/play"
            android:id="@+id/btn_play"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.518"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="TODO"
            android:layout_marginBottom="62dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/next"
            android:id="@+id/btn_next"
            app:layout_constraintStart_toEndOf="@+id/btn_play"
            android:layout_marginLeft="35dp"
            android:layout_marginStart="35dp"
            android:layout_marginBottom="62dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.052"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"/>
    <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/prev"
            android:id="@+id/btn_prev"
            app:layout_constraintEnd_toStartOf="@+id/btn_play"
            android:layout_marginEnd="45dp"
            android:layout_marginRight="45dp"
            android:layout_marginBottom="62dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"/>
    <SeekBar
            android:layout_width="342dp"
            android:layout_height="21dp"
            android:id="@+id/seekBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="90dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_play"
            style="@style/Widget.AppCompat.SeekBar"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"/>
    <TextView
            android:text="@string/_0_00"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_progress"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            app:layout_constraintEnd_toStartOf="@+id/tv_time"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.017"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/seekBar"
            android:layout_marginBottom="197dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
            android:text="@string/_2_30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_time"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/seekBar"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="197dp"/>
    <TextView
            android:text="@string/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_name"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="152dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="18sp"
            app:fontFamily="sans-serif-medium"/>
    <ImageView
            android:layout_width="334dp"
            android:layout_height="340dp"
            app:srcCompat="@mipmap/ic_launcher_round"
            android:id="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/seekBar"
            android:contentDescription="TODO" android:layout_marginLeft="30dp" android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp" android:layout_marginRight="30dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>